--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <input type="password">
     <div id="loginA">
       <p>
-        <span>로그인</span>
+        <span>로그인1</span>
       </p>
     </div>
     <div id="passwordA">비밀번호를 잊어버리셨나요?</div>
