--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 
   </head>
   <body>
-    <div id="login">로그인</div>
+    <div id="login">로그인1</div>
     <div id="email">이메일</div>
     <input type="email" name="email">
     <div id="password">비밀번호</div>
     <input type="password">
     <div id="loginA">
       <p>
-        <span>로그인1</span>
+        <span>로그인</span>
       </p>
     </div>
     <div id="passwordA">비밀번호를 잊어버리셨나요?</div>
