--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   </head>
   <body>
-    <div id="login">로그인1</div>
+    <div id="login">로그인</div>
     <div id="email">이메일</div>
     <input type="email" name="email">
     <div id="password">비밀번호</div>
