--- a/index.html
+++ b/index.html
@@ -7,9 +7,15 @@
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans+KR&display=swap" rel="stylesheet">
 
 
+
   </head>
   <body>
-    <div id="login">로그인</div>
+
+    <div id="login">로그인
+      <span class="workingtime">
+        <img src="images/Working Time.png" alt="">
+      </span>
+    </div>
     <div id="email">이메일</div>
     <input type="email" name="email">
     <div id="password">비밀번호</div>
@@ -20,7 +26,25 @@
       </p>
     </div>
     <div id="passwordA">비밀번호를 잊어버리셨나요?</div>
-    
+    <div id="facebook">
+      <p>
+        <span>페이스북으로 로그인</span>
+      </p>
+    </div>
+    <div id="google">
+      <p>
+        <span>구글로 로그인</span>
+      </p>
+    </div>
+    <div id="noaccount">아직 계정이 없으신가요?
+      <span>회원가입</span>
+    </div>
+
+
+
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="script.js"></script>
 
   </body>
 </html>
